--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
       </ul>
 
       <div id="tab-1" class="tab-content current">
-        Vornado Realty Trust
-        2019: NY-area sq. ft. owned: 32.61 million
-        2018 funds from operations: $776.4 million
-        2018 revenue: 2,164.7 million
-        Equity market cap: $12,231.1 million
-        2019 NY-area properties owned: 82
+        <p> Vornado Realty Trust</p>
+        <p> 2019: NY-area sq. ft. owned: 32.61 million</p>
+        <p> 2018 funds from operations: $776.4 million</p>
+        <p> 2018 revenue: 2,164.7 million</p>
+        <p> Equity market cap: $12,231.1 million</p>
+        <p> 2019 NY-area properties owned: 82</p>
       </div>
       <div id="tab-2" class="tab-content">
         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -107,7 +107,7 @@
 <iframe width="100%" height="520" frameborder="0" src="https://mcproductions.carto.com/builder/41b67d34-7913-4e58-a9df-a4b3ae4ad9a2/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen>
 </iframe>
 
-  <p> Reits impact. </p>
+  <p> Data obtained from the REIT's 10K filings on Edgar. </p>
 
   <p> Schlitz health goth craft beer master cleanse, neutra salvia trust fund cold-pressed church-key taiyaki. Pickled prism VHS, chia meditation glossier knausgaard taiyaki palo santo vegan truffaut cliche hell of. Messenger bag pork belly poke keffiyeh twee leggings freegan meditation knausgaard kale chips retro mumblecore. Adaptogen vegan hot chicken af tbh, succulents selvage sartorial wolf lo-fi tacos pok pok freegan single-origin coffee. Flannel hashtag yr etsy, raw denim activated charcoal crucifix kinfolk vice small batch. </p>
 
