--- a/index.html
+++ b/index.html
@@ -32,42 +32,58 @@
     <div id="main-container">
 
 
-      <h1> REITS own NYC</h1>
+      <h1>NYC REITs Look Beyond The Lack Of Rent Collection In April</h1>
       <p> By Macarena Carrizosa</p>
-      <p> REITS own 16,501 properties in New York state. </p>
+      <p> The equities markets seem to stray away from the labor market, except when it comes to REITS.  </p>
       <!--<blockquote> Notwithstanding any other provision of law, real
         property owned or leased by a cooperative corporation or on a
      </blockquote>
         -->
-      <p> These are the 4 of the REITs owning most of NYC.</p>
-      <p> Explain how they were chosen.</p>
+      <p> The New York City real estate market has some of the highest priced properties in the world. It's a city of renters, not landlords or owners, unless you count in REITS. </p>
 
       <ul class="tabs">
         <li class="tab-link current" data-tab="tab-1">VNO</li>
-        <li class="tab-link" data-tab="tab-2">Tab Two</li>
-        <li class="tab-link" data-tab="tab-3">Tab Three</li>
-        <li class="tab-link" data-tab="tab-4">Tab Four</li>
+        <li class="tab-link" data-tab="tab-2">SLG</li>
+        <li class="tab-link" data-tab="tab-3">BXP</li>
+        <li class="tab-link" data-tab="tab-4">ESRT</li>
       </ul>
 
       <div id="tab-1" class="tab-content current">
         <p> Vornado Realty Trust</p>
-        <p> 2019: NY-area sq. ft. owned: 32.61 million</p>
-        <p> 2018 funds from operations: $776.4 million</p>
-        <p> 2018 revenue: 2,164.7 million</p>
-        <p> Equity market cap: $12,231.1 million</p>
-        <p> 2019 NY-area properties owned: 82</p>
+        <p> Total Rentable Sq Ft: 29,487,000</p>
+        <p> Net Income 2019: $3,334,262,000</p>
+        <p> Net Income 2018: $422,603,000</p>
+        <p> Largest Tenants: IPG and affiliates, Facebook, Macy’s, AXA Equitable Life Insurance, Neuberger Berman Group LLC, Ziff Brothers Investments Inc.
+        <p> Share of annualized rent: 13.7%</p>
       </div>
       <div id="tab-2" class="tab-content">
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <p> SL Green</p>
+        <p> Total Rentable Sq Ft: 26,946,491</p>
+        <p> Net Income 2019: $291,487,000/p>
+        <p> Net Income 2018: $270,856,000</p>
+        <p> Largest tenants: Credit Suisse Securities, Viacom CBS, Ralph Lauren Corporation, Sony Corporation, Debevoise & Plimpton, The City of New York, King & Spalding, Visiting Nurse Service of New York, Giorgio Armani Corporation, Advance Magazine Group, Fairchild Publications, Metro-North Commuter Railroad Company, News America Incorporated, Nike Retail Services, Inc., Cravath, Swaine & Moore LLP, Omnicom Group, Inc., Cardinia Real Estate, National Hockey League, WME IMG, LLC, Amerada Hess Corp, WeWork, Amerada Hess Corp</p>
+        <p> Share of annualized rent: 37.2%</p>
       </div>
       <div id="tab-3" class="tab-content">
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        <p> Boston Properties</p>
+        <p> Total Rentable Sq Ft: 51,968,676 </p>
+        <p> Net Income 2019: $651,999,000</p>
+        <p> Net Income 2018: $712,563,000</p>
+        <p> Largest tenants: U.S. Government, Salesforce, Arnold & Porter Kaye Scholer, Biogen, WeWork, Arnold & Porter Kaye Scholer, Kirkland & Ellis, Wellington Management, Bank of America, Ropes & Grey, Shearman & Sterling, Google, Weil Gotshal & Manges, O’Melveny & Myers, Snap, Ann Taylor Corp., Bechtel Corporation, Blue Cross Blue Shield, Mass FInancial Services, Finnegan Henderson Farabow.</p>
+        <p> Share of annualized rent: 25.99%</p>
       </div>
       <div id="tab-4" class="tab-content">
-        Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        <p> Empire State Realty Trust</p>
+        <p> Total Rentable Sq. Ft.: 10,138,057</p>
+        <p> Net Income 2019: $554,817,196</p>
+        <p> Net Income 2018: $117,253,000</p>
+        <p> Largest tenants: Global Brands Group, LinkedIn, Coty Inc., PVH Corp., Sephora, Li & Fung, Signature Bank, Urban Outfitters, Macy's, Foot Locker, Federal Deposit Insurance Corp., Duane Reade/Walgreens, HNTB Corporation, The Interpublic Group of Co's, Inc., Legg Mason, Shutterstock, Fragoman, WDFG North America, The Michael J. Fox Foundation, ASCAP.</p>
+        <p> Share of annualized rent: 35.00%</p>
       </div>
 
-      <p> More text talking about the case.</p>
+      <p> Real Estate Investment Trusts (REITs) are companies that invest in real estate properties or mortgages. According to data from the National Association of Real Estate Investment Trusts Nareit, 43% of households in New York State are invested in REITs. There are 125 REITs that own property in  New York, that is 16,501 properties that compose $140 billion in total property value. </p>
+      <p> Your landlord may be one of these REITS or maybe you’d like to invest in one.</p>
+      <p> These are five NYC reits that own New York City and how they plan to weather the storm.</p>
       <!-- -<p> Text introducing the Choose Your Own Adventure.</p>
 
       <div class=adventure-container>
@@ -76,8 +92,6 @@
         <div id="options"></div>
       </div><br>
       -->
-
-      <p> Transition text.</p>
     <!--  <p> This is text setting up the second case study: one co-op or condo and three comparables.</p>
 
 
@@ -101,19 +115,23 @@
         Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
       </div>
 -->
-      <p> REITS MAP</p>
-      <p> Text describing Map data.</p>
+      <p> NYC REITs MAP</p>
+
 <!-- Map -->
 <iframe width="100%" height="520" frameborder="0" src="https://mcproductions.carto.com/builder/41b67d34-7913-4e58-a9df-a4b3ae4ad9a2/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen>
 </iframe>
 
   <p> Data obtained from the REIT's 10K filings on Edgar. </p>
 
-  <p> Schlitz health goth craft beer master cleanse, neutra salvia trust fund cold-pressed church-key taiyaki. Pickled prism VHS, chia meditation glossier knausgaard taiyaki palo santo vegan truffaut cliche hell of. Messenger bag pork belly poke keffiyeh twee leggings freegan meditation knausgaard kale chips retro mumblecore. Adaptogen vegan hot chicken af tbh, succulents selvage sartorial wolf lo-fi tacos pok pok freegan single-origin coffee. Flannel hashtag yr etsy, raw denim activated charcoal crucifix kinfolk vice small batch. </p>
+  <p> Vornado Realty Trust is one of the largest REITs in New York. In April alone, 47% of its retail tenants did not make rent payments. Steve Roth, CEO of Vornado took a 50% salary cut for the rest of the year, other executives took similar income reductions.</p>
+  <p>“Life as we know it is upside down, people are hurting, businesses are hurting, and the future is uncertain,” said Roth.</p>
+  <p>They also had to place 1,800 employees on furlough and deferred $125 million in capital projects. Despite the impact, Roth states that the 40% devaluation of Vornado’s stock value is an “exaggeration”. He estimates that if things continue the same way it would cost investors $1 per share for a total of 12 months. In fact when it comes to distress type opportunities Roth says their antenna is “very alert”.</p>
+  <p>SL Green is making bold moves to increase its cash balance. It sold half its stake in the skyscraper 1 Madison and put several non core properties for sale at discount prices. Over 90% of office rents came on time in April but only 65% of retail tenants made rent. SL Green shares feel 46% since February but the largest office owner REIT in New York has no doubt that activity will at some point go back to normal.</p>
+  <p>“Count me out is someone who believes that the future of work will be at home in a bedroom with a laptop computer and spotty Wi-Fi connections with family members doing video bumps,” said Marc Holliday, CEO and Chairman of SL Green.</p>
+  <p>“I would normally point out at the start of our earnings call that we once again beat our estimates and explain to you how well we performed in the first quarter as well as our growth expectations for 2020,” said Owen D. Thomas, CEO of Boston Properties. “However, we recognized all our worlds changed in March.”</p>
+  <p>Unlike other REITs, Boston properties did not see a significant decline in rent collections. 95% of office tenants paid rent on time as did 90% of their commercial tenants. </p>
+  <p>Empire State Realty Trust collected only 73% of its office rents and 46%of its retail rents in April. In their first quarter earnings call for the year, they expressed confidence in the markets bounce back and that all tenants were being worked with, “What we saw in April is not an indication of the future,” said Thomas P. Durels, Executive Vice President.</p>
 
-  <p> Iceland echo park swag roof party four loko lo-fi meh church-key readymade tacos raw denim. Flannel chicharrones +1 organic deep v cronut. Copper mug chicharrones offal adaptogen man bun prism letterpress, marfa truffaut humblebrag YOLO godard pork belly. Meggings poke listicle cold-pressed bushwick. Actually aesthetic hot chicken selfies trust fund quinoa yr. Tumblr keffiyeh chartreuse wayfarers disrupt biodiesel tofu. </p>
-
-  <p> Pitchfork beard lomo skateboard glossier banh mi shoreditch iPhone normcore dreamcatcher mlkshk hot chicken portland seitan. Letterpress keytar glossier gastropub vexillologist, wayfarers shabby chic jianbing. Narwhal intelligentsia jianbing twee post-ironic. Succulents aesthetic twee, wayfarers thundercats celiac green juice vegan fashion axe. Polaroid thundercats jianbing listicle four loko swag cold-pressed brunch pabst mumblecore mustache subway tile. </p>
 
   <!--    <div class=adventure-container>
         <h2> SECOND QUIZ </h2>
